external-crates/move/crates/move-compiler/tests/move_check/parser/recovery_parse_past_no_token.exp
error[E01008]: invalid hex string
  ┌─ tests/move_check/parser/recovery_parse_past_no_token.move:5:9
  │
5 │         x"abcd
  │         ^^^^^^ Missing closing quote (") after byte string

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/recovery_parse_past_no_token.move:8:29
  │    
8 │         fun wrong_return(): u64 {
  │                             --- Expected: 'u64'
  │ ╭───────────────────────────────^
  │ │ ╭─────────────────────────────'
9 │ │ │     }
  │ ╰─│─────^ Invalid return expression
  │   ╰─────' Given: '()'

